--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div id="header"></div>
 
         <div class="form-group">
-            <textarea id="notaInput" class="form-input" placeholder="Escreve uma nota..." rows="3"></textarea>
-            <button id="btnSalvar" class="btn btn-primary mt-1">Salvar</button>
+            <textarea id="notaInput" class="form-input mt-2" placeholder="Escreve uma nota..." rows="2"></textarea>
+            <button id="btnSalvar" class="btn mt-2">Salvar</button>
         </div>
 
         <div class="text-center">
@@ -50,7 +50,6 @@
             </div>
         </div>
     </div>
-
 
 
 
